<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="title_home">Historia aktywności</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profil</string>
    <string name="age">Wiek </string>
    <string name="height">Wzrost </string>
    <string name="weight">Waga </string>
    <string name="bmi">BMI: </string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="record">Record</string>
    <string name="dashboard">Dashboard</string>
    <string name="walk">Spacer</string>
    <string name="jogging">Jogging</string>
    <string name="cycling">Cycling</string>
    <string name="history_page">Historia aktywności</string>
    <string name="app_logo">App Logo</string>
    <string name="activity_time">Czas aktywności:</string>
    <string name="last_actvt">Ostatnie aktywności:</string>
    <string name="cycling_txt">Jazda na rowerze</string>
    <string name="walking_txt">Spacerowanie</string>
    <string name="google_maps_api">private</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stop_recording_button">stop</string>
    <string name="map_view">map view</string>
    <string name="distance">Distance</string>
    <string name="current_speed">Current Speed</string>
    <string name="google_maps_object">Google Maps object</string>
    <string name="route_lenght">Długość trasy:</string>
    <string name="save_btn_text">Zapisz</string>
    <string name="registration_subheader">Wprowadź swoje dane</string>
    <string name="registration_header">Witaj w aplikacji Fitness</string>
    <string name="logo">Logo</string>
    <string name="registration_name">Imię</string>
    <string name="registration_lastname">Nazwisko</string>
    <string name="profile_header">Profil użytkownika</string>
    <string name="private_policy">Jesteśmy zaangażowani w ochronę Twojej prywatności. Wszystkie dane, gromadzone przez naszą aplikację mobilną, są przechowywane lokalnie na Twoim urządzeniu i nie są udostępniane żadnym zewnętrznym podmiotom. Dbamy o bezpieczeństwo Twoich informacji i stosujemy zaawansowane środki techniczne, aby zapobiec nieautoryzowanemu dostępowi do danych. Twoje dane są poufne i używane jedynie w celu zapewnienia Ci jak najlepszej obsługi i spersonalizowanego doświadczenia z naszą aplikacją. Zachowujemy pełną zgodność z obowiązującymi przepisami dotyczącymi prywatności i ochrony danych.</string>
    <string name="bieganie">Bieganie</string>
    <string name="wci_nij_by_rozpocz_aktywno">Wciśnij by rozpocząć aktywność</string>
    <string name="wybierz_aktywnosc">Wybierz Aktywność:</string>
    <string name="historiia_aktywno_ci">Historiia Aktywności</string>
    <string name="jazda_na_rowerze">Jazda na rowerze</string>
    <string name="spacer">Spacer</string>
    <string name="startTraining">Rozpocznij trening</string>
    <string name="edit_profile">Edytuj profil</string>
    <string name="todo">TODO</string>
    <string name="distance_value">%d meters</string>
    <string name="start_label">START</string>
    <string name="stop_label">STOP</string>
    <string name="avg_speed">Średnia prędkość:</string>
</resources>