<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@android:color/white">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/intro"
        android:scaleType="centerCrop"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_header"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_subheader"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registration_name"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"/>
    <EditText
        android:id="@+id/etLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registration_lastname"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"/>
    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"/>
    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"/>
    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_btn_text"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:textSize="18sp"/>

</LinearLayout>
</ScrollView>